8223961: ZGC: Unexpected behaviour due to ZMetronome::wait_for_tick() oversleeping

Co-authored-by: Jie Fu <fujie@loongson.cn>
Reviewed-by: pliden, stefank